--- a/3._World_Wide_Web/public/frontpage/frontpage.html
+++ b/3._World_Wide_Web/public/frontpage/frontpage.html
@@ -12,5 +12,10 @@
 
 
     <script src="./frontpage/frontpage.js"></script>
+    <script>
+        setTimeout(() => {
+            window.location.href = "/bored"
+        }, 2000)
+    </script>
 </body>
 </html>
