Some comments about svelte for my note website

--- a/Mandatory_1/public/pages/terminalcommands/terminalcommands.html
+++ b/Mandatory_1/public/pages/terminalcommands/terminalcommands.html
@@ -36,5 +36,14 @@
     Use "cd .." to go up one directory
 </code>
 </pre>
+<h3>How to create svelte project</h3>
+<pre>
+<code>
+   npm degit sveltejs/template "name of your project"
+   cd to "name of your project"
+   npm install
+   npm run dev
+</code>
+</pre>
 </div>
 
