Router stuff and some notes for noteside

--- a/Mandatory_1/public/pages/terminalcommands/terminalcommands.html
+++ b/Mandatory_1/public/pages/terminalcommands/terminalcommands.html
@@ -43,6 +43,8 @@
    cd to "name of your project"
    npm install
    npm run dev
+
+   Write "--single inside start in package.json to specifiy single page app"
 </code>
 </pre>
 </div>
