--- a/Mandatory_1/public/pages/terminalcommands/terminalcommands.html
+++ b/Mandatory_1/public/pages/terminalcommands/terminalcommands.html
@@ -39,7 +39,7 @@
 <h3>How to create svelte project</h3>
 <pre>
 <code>
-   npm degit sveltejs/template "name of your project"
+   npx degit sveltejs/template "name of your project"
    cd to "name of your project"
    npm install
    npm run dev
